# better_input

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
src/: inp.rs  lib.rs  selection.rs  spinbox.rs
