[package]
name = "better_input"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "better_input"
crate-type = ["cdylib"]

[dependencies]
crossterm = "0.21"

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]